2012-07-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Updated the assembly version.

	* Config.cs:
	  Fixed a typo in the default config file.

2012-06-25  WOnder93  <omosnacek@gmail.com>

	* ProxyServerEventListener.cs:
	* ProxySessionEventListener.cs:
	  Removed event locks - replaced by layout lock in client.

	* AssemblyInfo.cs:
	  Updated the assembly version.

2012-06-17  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Updated the assembly version.

	* ProxyServerEventListener.cs:
	* ProxySessionEventListener.cs:
	  Changed proxy listeners' implementation to implicit as a
	  workaround for problems when the server runs under Mono and
	  the client under .NET Framework.

2012-06-14  WOnder93  <omosnacek@gmail.com>

	* ProxySessionEventListener.cs:
	* VirtualSessionEventListener.cs:
	* MBRVirtualSessionEventListener.cs:
	* ISessionEventListener.cs:
	  Renamed the OnPlayerPassed session event to
	  OnPlayerEndedTurn.
	Added a public OnNewRequest event to ISessionEventListener.

	* AssemblyInfo.cs:
	  Updated the assembly version.

	* Utils.cs:
	  Updated the interface version.

2012-06-12  WOnder93  <omosnacek@gmail.com>

	* ProxyServerEventListener.cs:
	* ProxySessionEventListener.cs:
	* VirtualServerEventListener.cs:
	* VirtualSessionEventListener.cs:
	* MBRVirtualServerEventListener.cs:
	* MBRVirtualSessionEventListener.cs:
	  Use double quotes in documentation.

	* AssemblyInfo.cs:
	  Updated copyright years.

	* Utils.cs:
	  Use double quotes in documentation.
	Use default values instead of overloaded methods where
	  possible.

2012-06-11  WOnder93  <omosnacek@gmail.com>

	* ProxyServerEventListener.cs:
	* ProxySessionEventListener.cs:
	* VirtualServerEventListener.cs:
	* VirtualSessionEventListener.cs:
	* MBRVirtualServerEventListener.cs:
	* MBRVirtualSessionEventListener.cs:
	  "Proxy" and "Virtual" listeners moved to the common library.

	* Bang# Common.csproj:
	  An automatic project file fix.